Se resuelve FIX de cerrar sesion

--- a/Libreria/nbproject/private/private.properties
+++ b/Libreria/nbproject/private/private.properties
@@ -1,7 +1,7 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
-file.reference.mysql-connector-java-5.1.23-bin.jar=/home/luis-valerio/Downloads/PT-Julz/PROYECTO TERMINAL v3/mysql-connector-java-5.1.45.zip
+file.reference.mysql-connector-java-5.1.23-bin.jar=/home/luis-valerio/Documents/luis/personales/PT-Julz/Libreria/mysql-connector-java-5.1.45.zip
 javac.debug=true
 javadoc.preview=true
 user.properties.file=/home/luis-valerio/.netbeans/8.2/build.properties
